More bug squashing with the help of sonarcloud.io

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -742,7 +742,7 @@ figure > figcaption .attr {
 }
 
 .icon {
-  font-family: "Material Icons";
+  font-family: "Material Icons", monospace;
   font-weight: 400;
   font-style: normal;
   vertical-align: top;
