--- a/assets/css/screen.post.css
+++ b/assets/css/screen.post.css
@@ -889,7 +889,7 @@ figure > figcaption .attr {
 }
 
 .icon {
-  font-family: "Material Icons";
+  font-family: "Material Icons", monospace;
   font-weight: 400;
   font-style: normal;
   vertical-align: top;
